--- a/FrontEnd/src/assets/styles/service.css
+++ b/FrontEnd/src/assets/styles/service.css
@@ -234,3 +234,10 @@ justify-content: center;
 align-items: center;
 
 }
+.button2{
+  background-color: #FFD000 ;
+
+}
+.button1{
+  background-color: #38B000 ;
+}
