--- a/FrontEnd/src/assets/styles/header.css
+++ b/FrontEnd/src/assets/styles/header.css
@@ -1,839 +1,15 @@
-/* .head {
 
-
-    background: linear-gradient(90deg, #007200 0%, #38B000 100%);
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-
-    height: 63px;
-    margin-bottom: 590px;
-    gap: 20px;
-
-
-
-
-
-
-
-}
-
-
-
-.info {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
-
-    gap: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-
-
-
-}
-
-.local-name,
-.phone-number {
-    color: #FFFFFF;
-    font-family: Neo Sans Arabic;
-    font-weight: 500px;
-    font-size: 18.12px;
-    line-height: 20.71px;
-    letter-spacing: 0%;
-    text-align: center;
-    width: 230px;
-
-    height: 21px;
-
-
-
-
-
-    
-}
-
-
-
-.organisme {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-content: right;
-    right: 150px;
-
-}
-
-.vector {
-
-
-
-    width: 100%;
-    height: 0px;
-    border-top: 0.92px solid;
-    border-image-source: linear-gradient(90deg, #2DA401 0%, #FEFEFE 51%, #2EA501 100%);
-    border-image-slice: 1;
-
-}
-
-.ellip-type {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.ellipse {
-    width: 9px;
-    height: 9px;
-    border-radius: 50%;
-
-    background: linear-gradient(180deg, #51FF00 0%, #FFFFFF 100%);
-
-
-
-}
-
-
-
-
-
-
-.icons {
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 10px;
-
-
-}
-
-.linkdin,
-.instegram,
-.facebook {
-    width: 35.83892822265625px;
-    height: 35.83892822265625px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 70%;
-    background: #FFFFFF;
-
-
-
-}
-
-.local-icon,
-.phone-icon {
-
-    width: 24px;
-    height: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border-radius: 50%;
-
-
-
-
-
-
-    background: #FFFFFF;
-
-}
-
-.second {
-    position: relative;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-    gap: 29px;
-
-    height: 59px;
-    top: 10px;
-
-
-
-
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-
-}
-
-
-.language {
-
-    width: 168px;
-    height: 59px;
-
-    border-radius: 125.36px;
-
-    background-color: #EDEDED;
-
-    display: flex;
-
-
-
-
-    gap: -50px;
-
-
-}
-
-.nav1,
-.nav2 {
-
-    width: 366px;
-    height: 59px;
-    display: flex;
-    flex-direction: row-reverse;
-
-
-
-
-
-
-    border-radius: 125.36px;
-    gap: 50.2px;
-    background-color: #EDEDED;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding-top: 4.27px;
-    padding-bottom: 4.27px;
-    padding-right: 4.27px;
-    padding-left: 4.27px;
-
-}
-
-.link {
-    font-family: 'Neo Sans Arabic', sans-serif;
-    font-weight: 500;
-    font-size: large;
-    line-height: 14.64px;
-    letter-spacing: 0%;
-    text-align: center;
-    color: #004B23;
-    display: inline-flex;
-    align-items: center;
-    gap: 6px;
-    text-decoration: none;
-    color: #004B23;
-
-
-}
-
-.active-link {
-
-    background: #38B000;
-    color: white;
-    width: 118.11px;
-    height: 46.55px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10.46px;
-    border-radius: 52.29px;
-    cursor: none;
-    display: inline-flex;
-    align-items: center;
-    gap: 6px;
-    text-decoration: none;
-}
-
-.link:hover {
-    color: #004B23;
-}
-
-
-.logo {}
-
-.donate {
-
-    width: 168px;
-    height: 59px;
-
-    border-radius: 125.36px;
-    border-width: 2.79px;
-
-
-    background: #FFAA00;
-    display: inline-flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-
-    text-align: center;
-    gap: 10px;
-    padding-top: 4.27px;
-    padding-bottom: 4.27px;
-    padding-right: 4.27px;
-    padding-left: 4.27px;
-}
-
-.now-donate {
-    color: #FFFFFF;
-    font-family: 'Neo Sans Arabic', sans-serif;
-    font-weight: 500;
-    font-size: 19.5px;
-    line-height: 22.29px;
-    letter-spacing: 0%;
-    text-align: center;
-    width: 67px;
-    height: 23px;
-
-
-
-
-
-}
-
-.logo {
-    width: 82px;
-    height: 80px;
-
-
-}
-
-.logo img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-
-
-
-.language-selector {
-    width: 168px;
-    height: 59px;
-    border-radius: 125.36px;
-    background-color: #EDEDED;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-    position: relative;
-    padding-top: 4.27px;
-    padding-bottom: 4.27px;
-    padding-right: 4.27px;
-    padding-left: 4.27px;
-}
-
-.language-selector .arrow {
-    font-size: 14px;
-    margin-left: 5px;
-}
-
-.language-selector img {
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-
-    border: 2px solid #FFFFFF;
-    object-fit: cover;
-
-
-}
-
-.lang-options {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    background-color: #EDEDED;
-    list-style: none;
-    border-radius: 10px;
-    padding: 0 10px;
-
-
-
-    z-index: 10;
-    width: 168px;
-}
-
-.lang-options.hidden {
-    display: none;
-}
-
-.lang-options li {
-    display: flex;
-    align-items: center;
-
-
-
-    padding: 5px 0;
-
-    cursor: pointer;
-    display: flex;
-    justify-content: space-around;
-}
-
-.local-name,
-.phone-number {
-    color: #FFFFFF;
-    font-family: 'Neo Sans Arabic';
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20.71px;
-    text-align: center;
-    width: auto;
-    height: 21px;
-}
-
-.local-phone {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-
-    padding: 5px 10px;
-    border-radius: 20px;
-    gap: 15px;
-}
-
-.local,
-.phone {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    gap: 5px;
-}
-
-.local-icon,
-.phone-icon {
-    width: 24px;
-    height: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background: #FFFFFF;
-} */
- /* 
-
-
-.head { 
-   
-   
-    background: linear-gradient(90deg, #007200 0%, #38B000 100%);
-    display: flex;
-    flex-direction: column;
-   width: 100vw;
-
-height: 63px;
-  margin-bottom: 590px; 
-  gap:20px;
-
-
-
-
-
-
-
-}
-
-*{
-  margin:0;
- 
- 
-}
-
-
-.info{
-    display:flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
-   
-    gap:10px;
-    padding-top:10px;
-    padding-bottom:10px;
-    
-    
- 
-
-}
-.local-name,.phone-number{
-   color: #FFFFFF;
-   font-family: Neo Sans Arabic;
-font-weight: 500px;
-font-size: 18.12px;
-line-height: 20.71px;
-letter-spacing: 0%;
-text-align: center;
-width: 230px;
-
-height: 21px;
-
-
-
-
-
-;
-}
-
-
-
-.organisme{
-    display:flex;
-    flex-direction: column;
-    gap:10px;
-    justify-content:right;
-    right:150px;
-
-}
-
-.vector {
-
-
-
-  width: 100%;
-  height: 0px; 
-  border-top: 0.92px solid;
-  border-image-source: linear-gradient(90deg, #2DA401 0%, #FEFEFE 51%, #2EA501 100%);
-  border-image-slice: 1; 
- 
-}
-
-.ellip-type{
-     display:flex;
-    flex-direction: row;
-    gap:10px;
-    justify-content: space-between;
-    align-items: center;
-}
-.ellipse{
-    width: 9px;
-height: 9px;
- border-radius: 50%;
- 
-background: linear-gradient(180deg, #51FF00 0%, #FFFFFF 100%);
-
-
-
-}
-
-
-
-
-
-
-.icons{
-    display:flex;
-    flex-direction: row-reverse;
-    gap:10px;
-
-    
-}
-.linkdin,.instegram,.facebook{
-   width: 35.83892822265625px;
-height: 35.83892822265625px;
-display:flex;
-justify-content: center;
-align-items: center;
-border-radius: 70%;
-background: #FFFFFF;
-
-
- 
-}
-.local-icon ,.phone-icon{
-
-width: 24px;
-height: 24px;
-display: flex;
-justify-content: center;
-align-items: center;
-
-border-radius: 50%;
-
-
-   
-
-
-
-background: #FFFFFF;
-
-}
-.second {
-  position: relative; 
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-  align-items: center;
-  gap:29px;
- 
-  height: 59px;
-  top:10px;
- 
- 
-   
-    
-    padding-top:10px;
-    padding-bottom:10px;
-
- 
-}
-
-
- .language {
-  
-  width: 168px;
-  height: 59px;
- 
-  border-radius: 125.36px;
-  
-  background-color: #EDEDED;
- 
-  display: flex;
- 
-
-
-
-  gap: -50px;
- 
-
-}
-.nav1,.nav2{
-  
- width: 366px;
-height: 59px;
-display: flex;
-flex-direction: row-reverse;
-
-
-
-
-
-
-border-radius: 125.36px; 
-  gap: 50.2px; 
- background-color:#EDEDED;
-  display: flex; 
-  align-items: center; 
-  justify-content: center;
-  text-align: center;
- padding-top: 4.27px;
-   padding-bottom: 4.27px;
-    padding-right: 4.27px;
-     padding-left: 4.27px;
-
-}
-.link {
-   font-family: 'Neo Sans Arabic', sans-serif;
-font-weight:500;
-font-size:large;
-line-height: 14.64px;
-letter-spacing: 0%;
-text-align: center;
-color: #004B23;
-display: inline-flex; 
-  align-items: center;  
-  gap: 6px;             
-  text-decoration: none; 
-  color: #004B23;  
-
-
-}
-
-.active-link {
-
-  background: #38B000;
-  color: white;
-  width: 118.11px;
-  height: 46.55px;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10.46px;
-  border-radius: 52.29px;
-  cursor: none;
-  display: inline-flex; 
-  align-items: center;  
-  gap: 6px;             
-  text-decoration: none; 
-}
-.link:hover{
-    color: #004B23;
-}
-
-
-.logo{
-
-}
-
-.donate{
-   
-   width: 168px;
-  height: 59px;
-
-border-radius: 125.36px;
-border-width: 2.79px;
-
-
-background: #FFAA00;
-display: inline-flex;
-flex-direction: row-reverse;
-justify-content: center;
-align-items: center;
-
-text-align: center;
-gap: 10px; padding-top: 4.27px;
-   padding-bottom: 4.27px;
-    padding-right: 4.27px;
-     padding-left: 4.27px;
-}
-.now-donate{
-    color: #FFFFFF;
-      font-family: 'Neo Sans Arabic', sans-serif;
-font-weight:500;
-font-size: 19.5px;
-line-height: 22.29px;
-letter-spacing: 0%;
-text-align: center;
-width: 67px;
-height: 23px;
-
-
-
-
-
-}
-.logo {
-  width: 82px;
-  height: 80px;
- 
- 
-}
-
- .logo img {
-  width: 100%;
-  height: 100%;
-  object-fit:contain;
-} 
-
-
-
-
-.language-selector {
-  width: 168px;
-  height: 59px;
-  border-radius: 125.36px;
-  background-color: #EDEDED;
-  display: flex;
-  align-items: center;
-  justify-content:space-evenly;
- 
-  position: relative;
-    padding-top: 4.27px;
-   padding-bottom: 4.27px;
-    padding-right: 4.27px;
-     padding-left: 4.27px;
-}
-
-.language-selector .arrow {
-  font-size: 14px;
-  margin-left: 5px;
-}
-
-.language-selector img {
-   width: 36px;
-  height: 36px;
-  border-radius: 50%;        
- 
-  border: 2px solid #FFFFFF; 
-  object-fit: cover; 
-
-
-}
-
-.lang-options {
-  position: absolute;
-  top: 70px;
-  left: 0;
-  background-color: #EDEDED;
-  list-style: none;
-  border-radius: 10px;
-  padding: 0 10px;
- 
- 
-
-  z-index: 10;
-  width: 168px;
-}
-
-.lang-options.hidden {
-  display: none;
-}
-
-.lang-options li {
-  display: flex;
-  align-items: center;
-  
-
-   
-  padding: 5px 0;
-
-  cursor: pointer;
-  display:flex;
-  justify-content: space-around;
-}
- .local-name, .phone-number {
-          color: #FFFFFF;
-          font-family: 'Neo Sans Arabic';
-          font-weight: 500;
-          font-size: 16px;
-          line-height: 20.71px;
-          text-align: center;
-          width: auto;
-          height: 21px;
-        }
-        .local-phone {
-          display: flex;
-          flex-direction: row-reverse;
-          justify-content: center;
-          align-items: center;
-         
-          padding: 5px 10px;
-          border-radius: 20px;
-          gap: 15px;
-        }
-
-        .local, .phone {
-          display: flex;
-          flex-direction: row-reverse;
-          align-items: center;
-          gap: 5px;
-        }
-
-        .local-icon, .phone-icon {
-          width: 24px;
-          height: 24px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border-radius: 50%;
-          background: #FFFFFF;
-        }
-
- */
  @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
 
-/* Header Styles */
+
 .header {
  
   width: 100%;
-  /* position: sticky; */
+  
   top: 0;
   z-index: 1000;
   display: flex;
@@ -847,7 +23,7 @@ height: 23px;
   padding: 0 1rem;
 }
 
-/* Info Bar */
+
 .info-bar {
   padding: 0.75rem 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
@@ -863,7 +39,7 @@ height: 23px;
   
 }
 
-/* Organization */
+
 .organization {
   display: flex;
   flex-direction: column;
@@ -927,7 +103,7 @@ height: 23px;
   white-space: nowrap;
 }
 
-/* Social Icons */
+
 .social-icons {
   display: flex;
   gap: 0.5rem;
@@ -948,7 +124,7 @@ height: 23px;
   transform: scale(1.1);
 }
 
-/* Main Navigation */
+
 .main-nav {
   padding: 0.75rem 0;
 }
@@ -961,7 +137,7 @@ height: 23px;
   flex-direction: row-reverse;
 }
 
-/* Mobile Menu Button */
+
 .mobile-menu-btn {
   display: none;
   background: none;
@@ -995,7 +171,6 @@ height: 23px;
   transform: rotate(-45deg) translate(6px, -6px);
 }
 
-/* Language Selector */
 .language-selector {
   position: relative;
   background: #ededed;
@@ -1059,7 +234,7 @@ height: 23px;
   height: 20px;
 }
 
-/* Navigation Links */
+
 .nav-left,
 .nav-right {
   display: flex;
@@ -1083,6 +258,9 @@ height: 23px;
   gap: 0.25rem;
   white-space: nowrap;
 }
+*, *::before, *::after { box-sizing: border-box; }
+body, h3, p { margin: 0; }
+
 
 .nav-link:hover,
 .nav-link.active {
@@ -1090,7 +268,7 @@ height: 23px;
   color: white;
 }
 
-/* Logo */
+
 .logo {
   width: 60px;
   height: 60px;
@@ -1103,7 +281,7 @@ height: 23px;
   object-fit: contain;
 }
 
-/* Donate Button */
+
 .donate-btn {
   background: #ffaa00;
   border-radius: 125px;
@@ -1126,7 +304,6 @@ height: 23px;
   white-space: nowrap;
 }
 
-/* Mobile Menu */
 .mobile-menu {
   display: none;
   background: rgba(0, 0, 0, 0.1);
@@ -1165,7 +342,6 @@ height: 23px;
   justify-content: center;
 }
 
-/* Responsive Design */
 @media (max-width: 1024px) {
   .info-content {
     flex-wrap: wrap;
