--- a/FrontEnd/src/assets/styles/our.css
+++ b/FrontEnd/src/assets/styles/our.css
@@ -16,4 +16,15 @@
 body {
   overflow-x: hidden;
 }
+@media (min-width: 769px) {
+  html, body, #root {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+
+
   
