--- a/FrontEnd/src/assets/styles/donate.css
+++ b/FrontEnd/src/assets/styles/donate.css
@@ -199,6 +199,7 @@ button {
     gap:0.2px;
     padding: 1.5rem;
     height: 50%;
+    margin-top: 200px;
 
   }
   .btn-group{
@@ -229,3 +230,7 @@ button {
 
 
 
+
+  } 
+  
+}
