--- a/FrontEnd/src/assets/styles/donate.css
+++ b/FrontEnd/src/assets/styles/donate.css
@@ -199,9 +199,9 @@ button {
     gap:0.2px;
     padding: 1.5rem;
     height: 50%;
-    margin-top: 200px;
-
+margin-top: 200px;
   }
+  
   .btn-group{
      display: flex;
      flex-direction: column;
@@ -230,7 +230,11 @@ button {
 
 
 
-
-  } 
   
-}
+  .btn-group{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap:10px;
+
+  }
