commit de merge

--- a/FrontEnd/src/assets/styles/donate.css
+++ b/FrontEnd/src/assets/styles/donate.css
@@ -6,8 +6,9 @@ body, h3, p { margin: 0; }
   justify-content: center;
   align-items: center;
   padding: 4rem 1rem;
-  width:100vw;
+  width:100%;
   margin-top: 100px;
+  position: relative;
 }
 
 .donate-card {
@@ -227,7 +228,8 @@ button {
 
    .graphic-box img{
     margin-left: 06px;
-    margin-top: -300px;
+  
+    top: 150px;
    
 
   } 
@@ -236,8 +238,15 @@ button {
 
    .graphic-box img{
     margin-left: 06px;
-    margin-top: -300px;
+    margin-top: -200px;
    
 
   } 
+  .btn-group{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap:10px;
+
+  }
 }
