--- a/FrontEnd/src/assets/styles/service.css
+++ b/FrontEnd/src/assets/styles/service.css
@@ -1,63 +1,52 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
-   
-    margin: 0;
+
+
+ *, *::before, *::after { box-sizing: border-box; }
+body, h3, p { margin: 0; }
+body{
+
  
-    
-} */
+
+  
+ 
+  
+}
 
 .service {
-  position :relative;
-  width: 100vw;
-  overflow: hidden;
-  height: 
-82vh;
-margin-top: 500px;
-position: relative;  
+  display: flex;
+  justify-content: space-evenly;
+ 
+  flex-wrap: nowrap;
+  gap:20px;
+  height: auto;
+
+
+
+
+  width:100%;
+ 
+
  background: linear-gradient(-74.24deg, #FFC909 -0.01%, #FFFFFF 108.29%);
 
- display:flex;
- flex-direction: row;
- justify-content: center;
- align-items: center;
- padding-top: 16px;
- padding-left: 8px;
- padding-right: 8px;
-padding-bottom: 16px;
-margin-bottom: 100px;
+
+
+
+
+
+
 }
 
-.heart {
-  position: absolute;
-  left: -380px;                  
-  top: 50%;                     
-  transform: translateY(-50%)   
-             rotate(-5deg);    
-  width: 200vh;                
-  height: 75vh;               
-  pointer-events: none;  
-  color: #FFFFFF61;
-       
+
+.heart
+ {
+  position: absolute; 
+ 
+   margin-top:-10px;
+   margin-left: -10%;
+  
+
 }
 .cercle{
-    position:absolute;
-   width: 75px;
-height: 79px;
-top:80%;
-left: 5%;
-
- 
-}
-
-
-
-
-.text-ligne {
   position: absolute;
   
 margin-top: 380px;
@@ -214,55 +203,53 @@ align-items: center;
   width: 25%;
 
 border-radius: 21px;
-
-margin-left: 30%;
-
-
-
-  }.pect-int {
-  position: absolute;
-  width: 60vh;
-  height: 70vh;
-  border-radius: 22.92px;
-  left: 47%;
-  top: 19%;
-
- 
-  background-image: url('/flags/unsplash_SBIak0pKUIE.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-
-   
-}
-.click{
-
-  width: 60px;
-  height: 60px;
-  border: 2px solid white; 
-  border-radius: 50%;
-  background-color: transparent; 
-  top:48%;
-  left:42%;
-  display: flex;
-  justify-content: center;
-  align-items:  center;
-}
-.botton{
-    background: #FFFFFF;
-width: 50px;
-height: 50px;
-
-
-border-radius: 50%;
+height: 60vh;
+position:relative;
 display:flex;
-justify-content: center;
-align-items: center;
+
+
+
+
+
 
 }
-.button2{
-  background-color: #FFD000 ;
+.ved-cadre{
+
+  background:pink;
+  width:100%;
+  height: 100%;
+  position:absolute;
+  margin-top: 12%;
+  margin-left: -12%;
+
+border-radius: 22.92px;
 
 }
-.button1{
-  background-color: #38B000 ;
+.content{
+  display:flex;
+  align-items: right;
+  justify-content: right;
+  gap:10px;
+  flex-direction: column;
+ 
 }
+
+
+
+.service {
+  width: 100vw;
+  padding: 1rem; 
+  height: auto; 
+  min-height: 80vh;
+  overflow-x: hidden; 
+}
+
+.icon-content {
+  width: 100%;
+  max-width: 500px;
+}
+
+
+
+
+
