--- a/FrontEnd/src/assets/styles/service.css
+++ b/FrontEnd/src/assets/styles/service.css
@@ -1,147 +1,176 @@
-
-
-
- *, *::before, *::after { box-sizing: border-box; }
-body, h3, p { margin: 0; }
-body{
-
- 
-
-  
- 
-  
+/* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+   
+    margin: 0;
+ 
+    
+} */
 
 .service {
-  display: flex;
-  justify-content: space-evenly;
- 
-  flex-wrap: nowrap;
-  gap:20px;
-  height: auto;
-
-
-
-
-  width:100%;
- 
-
+  position :relative;
+  width: 100vw;
+  overflow: hidden;
+  height: 
+82vh;
+margin-top: 500px;
+position: relative;  
  background: linear-gradient(-74.24deg, #FFC909 -0.01%, #FFFFFF 108.29%);
 
-
-
-
-
-
-
-}
-
-
-.heart
- {
-  position: absolute; 
- 
-   margin-top:-10px;
-   margin-left: -10%;
-  
-
-}
-.cercle{
-  position: absolute;
-  
-margin-top: 380px;
-
-margin-left:-50px;
-}
-.title-services{
- 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width:100%;
- 
-  position:relative;
-  
-  padding:1.8rem;
-  gap:10px;
- 
-  margin-left: 20px;
-  
-}
-.services{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content:  center;
-  gap:10px;
-  margin-top: 10%;
-  margin-left: 5%;
-  height: 100%;
-
- 
-}
-
-.icon-content{
-  display:flex;
-  flex-direction: row-reverse;
+ display:flex;
+ flex-direction: row;
  justify-content: center;
  align-items: center;
-
- padding-right:1rem;
-  gap:10px;
- 
-
-
-  background: linear-gradient(90deg, #FFFFFF 0%, #FFFFFF 100%);
-
-width: 70%;
-
-
-border-radius: 15px;
-height: 10%;
-
-
+ padding-top: 20;
+ padding-left: 8px;
+ padding-right: 8px;
+padding-bottom: 20px;
+margin-bottom: 100px;
 
 }
-.content {
 
+.heart {
+  position: absolute;
+  left: -380px;                  
+  top: 50%;                     
+  transform: translateY(-50%)   
+             rotate(-5deg);    
+  width: 200vh;                
+  height: 75vh;               
+  pointer-events: none;  
+  color: #FFFFFF61;
+       
+}
+.cercle{
+    position:absolute;
+   width: 75px;
+height: 79px;
+top:80%;
+left: 5%;
+
+ 
+}
+
+
+
+
+.text-ligne {
+  position: absolute;
+  top: 15%;
+  left: 12%;
   display: flex;
   flex-direction: column;
-  align-items: flex-end; 
-  gap: 0.5rem; 
-  padding: 1rem;
-  width: 100%; 
-  line-height: normal; 
+  gap:15px;
 }
 
-.content h4, 
-.content p {
+.text-ligne h2 {
+  font-weight: 500;
+  font-size: 38px;
+  line-height: 131%;
   text-align: right;
-  margin: 0;
-  line-height: 1.4; 
+  color: black;
 }
 
-.content h4 {
-  font-size: 1.5rem;
-  color: #000000;
-
-font-weight: 500;
-
-line-height: 100%;
-letter-spacing: 0px;
-text-align: right;
+.text-ligne hr {
 
  
+  width: 100%;
+ 
+
+
+border-width: 1px;
+border: 1px solid #000000;
+
+
+
+
 }
 
-.content p {
-  font-size: 1rem;
-  
-font-weight: 400;
 
+ .services{
+    position:absolute;
+    
+    width: 450px;
+height: 442px;
+ 
+margin-top: 15%;
+margin-right:48%;
+border-radius:15px;
+display:flex;
+flex-direction: column;
+
+justify-content: space-evenly;
+align-items: center;
+
+ }
+
+ .serv{
+width: 100%;
+height: 90px;
+
+border-radius: 15px;
+background: linear-gradient(90deg, #FFFFFF 0%, #FFFFFF 100%);
+
+ display:flex;
+ flex-direction: row-reverse;
+ justify-content: center;
+ align-items: center;
+ gap:10px;
+ padding:2%;
+
+ }
+ .icon-serv{
+  width: 45px;
+height: 42px;
+
+
+
+
+border-radius: 6px;
+background: linear-gradient(0deg, #007200 0%, #38B000 100%);
+
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+
+ }
+ .icon-serv svg{
+    width: 35px;
+height: 30px;
+
+
+ }
+ .title-serv{
+   text-align: right;
+   color: #000000;
+  
+font-weight: 500;
+font-size: 24.19px;
+line-height: 100%;
+letter-spacing: 0px;
+
+
+
+
+   
+
+ }
+ .explain{
+    text-align: right;
+  
+ 
+font-weight: 400px;
+font-size: 16px;
+line-height: 131%;
 letter-spacing: 0%;
 text-align: right;
+
+
 color: #525560;
 
 
@@ -189,8 +218,9 @@ margin-left: 30%;
   border: 2px solid white; 
   border-radius: 50%;
   background-color: transparent; 
-  top:48%;
-  left:42%;
+  
+  margin-top: 250px;
+  margin-left: 180px;
   display: flex;
   justify-content: center;
   align-items:  center;
