--- a/FrontEnd/src/assets/styles/our.css
+++ b/FrontEnd/src/assets/styles/our.css
@@ -24,6 +24,13 @@ body {
     padding: 0;
   }
 }
+/* @media (min-width:1536px){
+
+  .organisme{
+  background-color: red;
+  width: 100%;
+  }
+} */
 
 
 
