--- a/FrontEnd/src/assets/styles/service.css
+++ b/FrontEnd/src/assets/styles/service.css
@@ -16,19 +16,20 @@ body {
   width: 100vw;
   overflow: hidden;
   height: 
-82vh;
+102vh;
 margin-top: 500px;
 position: relative;  
  background: linear-gradient(-74.24deg, #FFC909 -0.01%, #FFFFFF 108.29%);
+   
 
  display:flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
- padding-top: 16px;
+ padding-top: 30px;
  padding-left: 8px;
  padding-right: 8px;
-padding-bottom: 16px;
+padding-bottom: 30px;
 margin-bottom: 100px;
 }
 
@@ -59,11 +60,12 @@ left: 5%;
 
 .text-ligne {
   position: absolute;
-  top: 15%;
+  top:22%;
+
   left: 12%;
   display: flex;
   flex-direction: column;
-  gap:15px;
+  gap:0.6rem
 }
 
 .text-ligne h2 {
@@ -201,7 +203,7 @@ margin-left: 30%;
   height: 70vh;
   border-radius: 22.92px;
   left: 47%;
-  top: 19%;
+  top: 25%;
 
  
   background-image: url('/flags/unsplash_SBIak0pKUIE.png');
@@ -211,7 +213,7 @@ margin-left: 30%;
    
 }
 .click{
-
+position:absolute;
   width: 60px;
   height: 60px;
   border: 2px solid white; 
@@ -244,11 +246,13 @@ align-items: center;
 }
 
 
-@media ( max-width:412px){
+ 
+@media ( max-width:480px){
 
    .service{
    position: relative;
-   width: 100%;   
+   width: 100%;  
+ 
 
   } 
   
