--- a/FrontEnd/src/assets/styles/header.css
+++ b/FrontEnd/src/assets/styles/header.css
@@ -10,7 +10,7 @@ body, h3, p {
 
 .header {
   width: 100%;
-  position: fixed;
+ 
   top: 0;
   left: 0;
   z-index: 1000;
@@ -34,7 +34,7 @@ body, h3, p {
 
 .info-content {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-direction: row-reverse;
   flex-wrap: nowrap;
