commit avant de commence dans about

--- a/FrontEnd/src/assets/styles/our.css
+++ b/FrontEnd/src/assets/styles/our.css
@@ -36,6 +36,22 @@ body {
   box-sizing: border-box;
 } */
 
+ @media (max-width: 768px) {
+                .flex {
+                    flex-direction: column;
+                }
 
+                .gap-5 {
+                    gap: 1rem;
+                }
+
+                .text-4xl {
+                    font-size: 2rem;
+                }
+
+                .absolute {
+                    display: none;
+                }
+            }
 
   
