--- a/FrontEnd/src/assets/styles/header.css
+++ b/FrontEnd/src/assets/styles/header.css
@@ -17,8 +17,15 @@ body, h3, p {
   left: 0;
   z-index: 1000;
   display: flex;
+
   flex-direction: column;
   gap: 20px;
+}
+.header {
+  /* position: fixed; */
+  width: 100%;
+  top: 0;
+  z-index: 1000; /* Assure qu’il est toujours au-dessus */
 }
 
 .container {
